--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Example</title>
+        <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
     </head>
     <body>
 222222222222一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個
