--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Pragma" content="no-cache">
     </head>
     <body>
+        <img src='./img/深圳景點地圖.jpg'></img>
 222222222222一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個
 
 333333333一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個一人有一個
