--- a/tips/伙房28法.html
+++ b/tips/伙房28法.html
@@ -30,7 +30,115 @@
                 <td>大火燒開，中小火燒透，最後大火收汁。</td>
                 <td>質地較為緊實、耐煮的食材。</td>
                 <td>紅燒肉</td>
-            </tr>                       
+            </tr>
+            <tr>
+                <td>滑炒</td>
+                <td>油溫三四成，食物上漿後翻炒至微熟，然後加調料拌炒即可。</td>
+                <td>不同用</td>
+                <td>水晶蝦仁</td>
+            </tr>             
+            <tr>
+                <td>生炒</td>
+                <td>食物不上漿，直接炒。</td>
+                <td></td>
+                <td>炒肉絲</td>
+            </tr> 
+            <tr>
+                <td>熟炒</td>
+                <td>食物已加工，再加入調料、輔料入鍋炒。</td>
+                <td></td>
+                <td>回鍋肉</td>
+            </tr> 
+            <tr>
+                <td>軟炒</td>
+                <td>用於液體食物，小油量推炒而成。</td>
+                <td></td>
+                <td>炒雞蛋</td>
+            </tr> 
+            <tr>
+                <td>水炒</td>
+                <td>在炒菜時加入少量水，以減少用油量和油煙，適用於上湯開頭的菜式。</td>
+                <td>保留蔬菜營養和風味</td>
+                <td>上湯豆苗</td>
+            </tr>
+            <tr>
+                <td>煮</td>
+                <td>一鍋水大火燒開，小火加熱。有白煮和鹽水煮兩種。</td>
+                <td>保留食材原味，烹調簡單</td>
+                <td>蒜泥白肉、鹽水毛豆</td>
+            </tr>
+            <tr>
+                <td>汆</td>
+                <td>一鍋水大火燒開，食材滾一下，馬上撈出來。</td>
+                <td>保留食材原味，烹調簡單，針對快熟食材</td>
+                <td>白灼蝦，白灼菜心</td>
+            </tr>  
+            <tr>
+                <td>蒸</td>
+                <td>一鍋水大火燒開，以器皿盛載食材放入鍋中，蓋上鍋蓋使用蒸氣將食材煮熟。</td>
+                <td>保留食材原味，烹調簡單</td>
+                <td>清蒸魚</td>
+            </tr>
+            <tr>
+                <td>燉</td>
+                <td>食材和水放入燉鍋，水開後蓋上鍋蓋轉小火將食材味道慢慢煮出來。</td>
+                <td>烹調簡單，針對耐煮食材</td>
+                <td>燉湯</td>
+            </tr>
+            <tr>
+                <td>隔水燉</td>
+                <td>一鍋水大火燒開，將食材和水以帶蓋器皿盛載，蓋上鍋蓋使用蒸氣將食材煮熟。</td>
+                <td>保留食材原味，烹調簡單，以時間換取食材內外鮮嫩一致</td>
+                <td></td>
+            </tr>  
+            <tr>
+                <td>煨</td>
+                <td>已熟食材放進陶鍋鍋裡，加入湯水、調料，用大火燒開後，蓋上鍋蓋，調較火候加熱直至酥爛入味，回炒鍋大火加熱收汁。</td>
+                <td>半肉半濃湯，針對耐煮食材</td>
+                <td>煨牛肉</td>
+            </tr> 
+            <tr>
+                <td>燜</td>
+                <td>已熟食材放進金屬鍋裡，加入湯水、調料，用大火燒開後，蓋上鍋蓋，調較火候加熱直至酥爛入味，最後勾芡出鍋。</td>
+                <td>半肉半羹湯，針對耐煮食材</td>
+                <td>燜牛腩</td>
+            </tr>  
+            <tr>
+                <td>扒</td>
+                <td>先將原材料加熱成熟，然後調制芡汁淋於原料上。</td>
+                <td>半肉半羹湯，針對快熟食材</td>
+                <td>折豆苗</td>
+            </tr>            
+            <tr>
+                <td>溜</td>
+                <td>先將原材料加熱成熟，然後食材連湯汁大火加熱後勾芡</td>
+                <td>半肉半羹湯，針對快熟食材</td>
+                <td>糟溜魚片</td>
+            </tr>
+            <tr>
+                <td>燴</td>
+                <td>先將原材料加熱成熟，然後食材連湯汁大火加熱收汁</td>
+                <td>半肉半濃湯，針對乳化作用</td>
+                <td>折燴魚頭</td>
+            </tr>          
+             <tr>
+                <td>焗</td>
+                <td>將肉類調味後用鍚紙或其他材料包好，通過封閉式加熱。</td>
+                <td>使食材自身水分汽化</td>
+                <td>鹽焗雞，叫化雞</td>
+            </tr>  
+             <tr>
+                <td>生煎</td>
+                <td></td>
+                <td>通过快速加热和调味达到食材外酥里嫩的效果。</td>
+                <td>煎魚</td>
+            </tr>
+             <tr>
+                <td>水煎</td>
+                <td>鍋熱後倒入油，放入食材後，加點水蓋上鍋蓋燜熟。</td>
+                <td>分為水煮、收乾、煎製三個過程</td>
+                <td>水煎包</td>
+            </tr>            
             </table>
 
     </body>
