--- a/tips/伙房28法.html
+++ b/tips/伙房28法.html
@@ -46,7 +46,7 @@
             <tr>
                 <td>熟炒</td>
                 <td>食物已加工，再加入調料、輔料入鍋炒。</td>
-                <td></td>
+                <td>炸>爆>煎>炒>煮</td>
                 <td>回鍋肉</td>
             </tr> 
             <tr>
@@ -118,7 +118,7 @@
             <tr>
                 <td>燴</td>
                 <td>先將原材料加熱成熟，然後食材連湯汁大火加熱收汁</td>
-                <td>半肉半濃湯，針對乳化作用</td>
+                <td>半肉半濃湯，針對乳化作用或含澱粉輔料</td>
                 <td>折燴魚頭</td>
             </tr>          
              <tr>
@@ -140,6 +140,5 @@
                 <td>水煎包</td>
             </tr>            
             </table>
-
     </body>
 </html>
